fx some bugs and add new collapse

--- a/css/sass/_global.sass
+++ b/css/sass/_global.sass
@@ -43,6 +43,7 @@ $accent: $material-brown
 // 控件默认颜色
 $text-normal-color: rgba(0, 0, 0, .8)
 $btn-normal-color: #efefef
+$code-normal-color: #a31515
 
 
 // 间距
@@ -51,7 +52,7 @@ $lite-text-baesd: .25em .5em
 
 
 // 阴影
-$controls-normal-shadow: 0 1px 2px rgba(0, 0, 0, .1)
+$controls-normal-shadow: 0 1px 2px rgba(0, 0, 0, .16)
 $controls-hover-shadow: 0 2px 4px rgba(0, 0, 0, .3)
 $header-normal-shadow: 0 2px 3px rgba(0, 0, 0, .3)
 
@@ -59,7 +60,7 @@ $header-normal-shadow: 0 2px 3px rgba(0, 0, 0, .3)
 // 过渡时间
 $short-duration: .3s
 $average-duration: .5s
-$long-duration: 1s
+$long-duration: .7s
 
 
 // 间距定义
